--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,10 @@
 -----------------------------------------------------------------------------------*/
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&amp;display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&amp;display=swap");
+
+.error{
+  color: red;
+}
 @-webkit-keyframes zoom {
   0% {
     -webkit-transform: scale(1);
